--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ashmit sedai</title>
 </head>
+
 <body>
-    <h1>new project</h1>
-    <p>ok now I am starting my work.</p>
+    <h1>introduction</h1>
+    <p>My name is Ashmit Sedai. I temporaryly live in kathmandu but my permanent address is gorkha. 2061/10/09 is recognized as the special day because i was born in that day. Now my age is 15 . And my height is nearly 6ft. I am now studying in grade 11.  </p>
 </body>
 </html>
