--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
+    
     <h1>introduction</h1>
-    <p>My name is Ashmit Sedai. I temporaryly live in kathmandu but my permanent address is gorkha. 2061/10/09 is recognized as the special day because i was born in that day. Now my age is 15 . And my height is nearly 6ft. I am now studying in grade 11.  </p>
+    <p<background >My name is Ashmit Sedai. I temporaryly live in kathmandu but my permanent address is gorkha. 2061/10/09 is recognized as the special day because i was born in that day. Now my age is 15 . And my height is nearly 6ft. I am now studying in grade 11.  </p>
+    <img src="IMG_0513.jpg">
 </body>
 </html>
