--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>introduction</h1>
-    <p>My name is Ashmit Sedai. I temporaryly live in kathmandu but my permanent address is gorkha. 2061/10/09 is recognized as the special day because i was born in that day. Now my age is 15 . And my height is nearly 6ft. I am now studying in grade 11.  </p>
+    <p>Hey,My name is Ashmit Sedai. I temporaryly live in kathmandu but my permanent address is gorkha. 2061/10/09 is recognized as the special day because i was born in that day. Now my age is 15 . And my height is nearly 6ft. I am now studying in grade 11.  </p>
     <p>Simply I have a logic that we need to have experience of each and every event of our life. We need to have a definition of the life we are living. It should have its proper destination in different way. Whenever you think that the way seems to be wroung then its better to leave that.</p>
     <img src="IMG_0513.jpg" alt="ashmit sedai" style="width:900px;height:600px;">
 </body>
